--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -11,10 +11,10 @@
     
     {% block content %}
 
-        <div class="relative flex items-center justify-center w-1/3 h-40 mx-auto border border-red-700 rounded-xl top-10">
+        <div class="flex items-center justify-center w-1/3 h-40 mx-auto border border-white rounded-xl">
             <ul>
                 {% for topico in topicos %}
-                    <li><a href="{% url 'exibir_topico' topico.id %}">{{ topico.nome_topico }}</a></li>
+                    <li class="flex flex-row hover:underline"><span class="mr-2"><img class="w-7 h-7" src="{{ topico.icon_topico.url }}" alt=""></span><a target="_blank" href="{% url 'exibir_topico' topico.id %}">{{ topico.nome_topico }}</a></li>
                 {% endfor %}
             </ul>
         </div>
