Atualiza templates base e home
- Atualizações foram feitas nos templates base.html e home.html
    - base.html: Adiciona botão de pesquisa no navbar (ainda sem função)
    - home.html: Adiciona texto de boas vindas e imagem chamativa
- Adiciona novas imagens ao projeto: aprendiz.jpg e curso-de-programacao.jpg

--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -11,6 +11,14 @@
     
     {% block content %}
 
+        <h1 class="mt-3 mb-3 text-3xl font-bold text-center">Bem-vindo ao Class01: Seu Portal de Conteúdos Tecnológicos!</h1>
+
+        <div class="flex flex-row items-center">
+            <p class="w-1/3 mx-10 text-lg text-left text-wrap">No Class01, acreditamos que a tecnologia é a chave para o futuro. Nosso objetivo é proporcionar a você o melhor conteúdo tecnológico, focado em programação e suas diversas vertentes. Aqui, você encontrará um vasto acervo de recursos essenciais para aprimorar suas habilidades e expandir seu conhecimento na área.</p>
+
+            <img class="w-1/2 h-auto mt-5 mb-5 rounded-xl" src="../img/curso-de-programacao.jpg" alt="aprendiz de programação">
+        </div>
+
         <div class="flex items-center justify-center w-1/3 h-40 mx-auto border border-white rounded-xl">
             <ul>
                 {% for topico in topicos %}
