--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -14,18 +14,35 @@
         <h1 class="mt-3 mb-5 text-4xl font-bold text-center">Bem-vindo ao Class01: Seu Portal de Conteúdos Tecnológicos!</h1>
 
         <div class="flex flex-row items-center mt-10">
-            <p class="w-1/3 mx-10 mt-2 mb-auto text-lg font-semibold text-left text-wrap">No Class01, acreditamos que a tecnologia é a chave para o futuro. Nosso objetivo é proporcionar a você o melhor conteúdo tecnológico, focado em programação e suas diversas vertentes. Aqui, você encontrará um vasto acervo de recursos essenciais para aprimorar suas habilidades e expandir seu conhecimento na área.</p>
+            <div class="w-1/3 mx-10 mt-2 mb-auto">
+                <p class="mx-10 mt-2 mb-auto text-lg font-semibold text-left text-wrap">No Class01, acreditamos que a tecnologia é a chave para o futuro. Nosso objetivo é proporcionar a você o melhor conteúdo tecnológico, focado em programação e suas diversas vertentes. Aqui, você encontrará um vasto acervo de recursos essenciais para aprimorar suas habilidades e expandir seu conhecimento na área.</p>
+
+                <button type="submit" class="px-4 py-2 mx-10 mt-10 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Comece agora</button>
+            </div>
 
             <img class="w-1/2 h-auto mt-5 mb-5 rounded-xl" src="../img/curso-de-programacao.jpg" alt="aprendiz de programação">
         </div>
 
-        <div class="flex items-center justify-center w-1/3 h-40 mx-auto border border-white rounded-xl">
+        <section id="topics" class="w-2/3 mx-auto">
+            <h2 class="text-3xl text-center">Conheça nossos conteúdos</h2>
+            <div class="w-1/2 mx-auto">
+                <ul class="mt-6 mb-6">
+                    {% for topico in topicos %}
+                        <li class="flex flex-row mx-32 my-1 hover:underline"><span class="mr-2"><img class="w-7 h-7" src="{{ topico.icon_topico.url }}" alt=""></span><a href="{% url 'exibir_topico' topico.id %}">{{ topico.nome_topico }}</a></li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </section>
+
+        
+
+        <!-- <section id="topics" class="flex items-center justify-center w-1/3 h-40 mx-auto border border-white rounded-xl">
             <ul>
                 {% for topico in topicos %}
                     <li class="flex flex-row hover:underline"><span class="mr-2"><img class="w-7 h-7" src="{{ topico.icon_topico.url }}" alt=""></span><a href="{% url 'exibir_topico' topico.id %}">{{ topico.nome_topico }}</a></li>
                 {% endfor %}
             </ul>
-        </div>
+        </section id="topics"> -->
 
     {% endblock %}
 
