Adiciona novas funcionalidades ao projeto:
- Atualiza o modelo de dados em 'class01/home/models.py'
- Modifica o template da página inicial em 'class01/home/templates/home.html'
- Implementa novas views em 'class01/home/views.py'
    - Adiciona a variável 'context' ao método 'home'
    - Adiciona a variável 'new_suport_form' para receber o formulário de suporte

- Em breve serão feitas melhorias nas classes usando class based views

--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -34,6 +34,19 @@
             </div>
         </section>
 
+        <section class="w-2/3 mx-auto">
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+
+                <table class="w-11/12 text-blue-800">
+                    <tr>
+                        <td>{{ form.as_table }}</td>
+                        <td class="mx-auto"><input class="mx-auto" type="submit" value="Enviar"></td>
+                    </tr>
+                </table>
+            </form>
+        </section>
+
         
 
         <!-- <section id="topics" class="flex items-center justify-center w-1/3 h-40 mx-auto border border-white rounded-xl">
