--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -34,16 +34,49 @@
             </div>
         </section>
 
-        <section class="w-2/3 mx-auto">
-            <form method="post" enctype="multipart/form-data">
+        <section class="max-w-md mx-auto mt-10">
+            <h2 class="text-3xl text-center">Feedback</h2>
+            <form method="post">
                 {% csrf_token %}
-
-                <table class="w-11/12 text-blue-800">
-                    <tr>
-                        <td>{{ form.as_table }}</td>
-                        <td class="mx-auto"><input class="mx-auto" type="submit" value="Enviar"></td>
-                    </tr>
-                </table>
+                <div class="mb-4">
+                    <label for="{{ form.nome.id_for_label }}" class="block text-sm font-medium text-gray-200">
+                        Nome
+                    </label>
+                    {{ form.nome }}
+                    {% if form.nome.errors %}
+                        <p class="text-xs italic text-red-500">{{ form.nome.errors }}</p>
+                    {% endif %}
+                </div>
+                <div class="mb-4">
+                    <label for="{{ form.email.id_for_label }}" class="block text-sm font-medium text-gray-200">
+                        Email
+                    </label>
+                    {{ form.email }}
+                    {% if form.email.errors %}
+                        <p class="text-xs italic text-red-500">{{ form.email.errors }}</p>
+                    {% endif %}
+                </div>
+                <div class="mb-4">
+                    <label for="{{ form.assunto.id_for_label }}" class="block text-sm font-medium text-gray-200">
+                        Assunto
+                    </label>
+                    {{ form.assunto }}
+                    {% if form.assunto.errors %}
+                        <p class="text-xs italic text-red-500">{{ form.assunto.errors }}</p>
+                    {% endif %}
+                </div>
+                <div class="mb-4">
+                    <label for="{{ form.mensagem.id_for_label }}" class="block text-sm font-medium text-gray-200">
+                        Mensagem
+                    </label>
+                    {{ form.mensagem }}
+                    {% if form.mensagem.errors %}
+                        <p class="text-xs italic text-red-500">{{ form.mensagem.errors }}</p>
+                    {% endif %}
+                </div>
+                <button type="submit" class="w-full px-4 py-2 text-white bg-indigo-600 rounded-md hover:bg-indigo-700">
+                    Enviar
+                </button>
             </form>
         </section>
 
