--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -74,7 +74,7 @@
                         <p class="text-xs italic text-red-500">{{ form.mensagem.errors }}</p>
                     {% endif %}
                 </div>
-                <button type="submit" class="w-full px-4 py-2 text-white bg-indigo-600 rounded-md hover:bg-indigo-700">
+                <button type="submit" class="block w-32 px-4 py-2 mx-auto text-white bg-indigo-600 rounded-md hover:bg-indigo-700">
                     Enviar
                 </button>
             </form>
