feat: Adicionando arquivos ao projeto:
- assets-p.i/GESTÃO DE PROJETOS.txt
- assets-p.i/app_artia.jfif
- assets-p.i/app_asana.jpg
- assets-p.i/app_trello.jpg
- assets-p.i/aprendiz.jpg
- assets-p.i/curso-de-programacao.jpg
- assets-p.i/django_img.jfif
- assets-p.i/gestao.png
- assets-p.i/gestao_p.jfif
- assets-p.i/pycharm_img.webp
- assets-p.i/python-jupyter.png
- assets-p.i/python_18894.png
- assets-p.i/python_img.jfif
- class01/db.sqlite3

Modificações realizadas:

- .gitignore
- class01/templates/base.html
- class01/home/forms.py
- class01/home/templates/home.html
- class01/home/templates/topico.html

--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Class 01</title>
+    <title>Class 01{% block title %} {% endblock %}</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -98,6 +98,8 @@
   </ul>
   </div>
 </footer>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 
 </body>
 </html>
