--- a/class01/home/templates/topico.html
+++ b/class01/home/templates/topico.html
@@ -2,9 +2,7 @@
 {% load static tailwind_tags %}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{% block title %} - {{ topico.nome_topico }} {% endblock %}</title>
     {% tailwind_css %}
 </head>
 <body class="flex items-center justify-center">
