--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -2,9 +2,6 @@
 {% load static tailwind_tags %}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     {% tailwind_css %}
 </head>
 <body class="flex items-center justify-center">
@@ -13,7 +10,7 @@
 
         <h1 class="mt-3 mb-5 text-4xl font-bold text-center">Bem-vindo ao Class01: Seu Portal de Conteúdos Tecnológicos!</h1>
 
-        <div class="flex flex-row items-center mt-10">
+        <div class="flex items-center mt-10 lg:flex-row sm:flex-col">
             <div class="w-1/3 mx-10 mt-2 mb-auto">
                 <p class="mx-10 mt-2 mb-auto text-lg font-semibold text-left text-wrap">No Class01, acreditamos que a tecnologia é a chave para o futuro. Nosso objetivo é proporcionar a você o melhor conteúdo tecnológico, focado em programação e suas diversas vertentes. Aqui, você encontrará um vasto acervo de recursos essenciais para aprimorar suas habilidades e expandir seu conhecimento na área.</p>
 
@@ -28,7 +25,7 @@
             <div class="w-1/2 mx-auto">
                 <ul class="mt-6 mb-6">
                     {% for topico in topicos %}
-                        <li class="flex flex-row mx-32 my-1 hover:underline"><span class="mr-2"><img class="w-7 h-7" src="{{ topico.icon_topico.url }}" alt=""></span><a href="{% url 'exibir_topico' topico.id %}">{{ topico.nome_topico }}</a></li>
+                        <li class="flex flex-row mx-32 my-1 hover:underline"><span class="mr-2"><img class="w-7 h-7" src="{{ topico.icon_topico.url }}" alt="Ícone {{ topico.nome_topico }}"></span><a href="{% url 'exibir_topico' topico.id %}">{{ topico.nome_topico }}</a></li>
                     {% endfor %}
                 </ul>
             </div>
@@ -38,7 +35,7 @@
             <h2 class="text-3xl text-center">Feedback</h2>
             <form method="post">
                 {% csrf_token %}
-                <div class="mb-4">
+                <div class="mb-4 text-gray-800">
                     <label for="{{ form.nome.id_for_label }}" class="block text-sm font-medium text-gray-200">
                         Nome
                     </label>
@@ -47,7 +44,7 @@
                         <p class="text-xs italic text-red-500">{{ form.nome.errors }}</p>
                     {% endif %}
                 </div>
-                <div class="mb-4">
+                <div class="mb-4 text-gray-800">
                     <label for="{{ form.email.id_for_label }}" class="block text-sm font-medium text-gray-200">
                         Email
                     </label>
@@ -56,7 +53,7 @@
                         <p class="text-xs italic text-red-500">{{ form.email.errors }}</p>
                     {% endif %}
                 </div>
-                <div class="mb-4">
+                <div class="mb-4 text-gray-800">
                     <label for="{{ form.assunto.id_for_label }}" class="block text-sm font-medium text-gray-200">
                         Assunto
                     </label>
@@ -65,7 +62,7 @@
                         <p class="text-xs italic text-red-500">{{ form.assunto.errors }}</p>
                     {% endif %}
                 </div>
-                <div class="mb-4">
+                <div class="mb-4 text-gray-800">
                     <label for="{{ form.mensagem.id_for_label }}" class="block text-sm font-medium text-gray-200">
                         Mensagem
                     </label>
@@ -79,16 +76,6 @@
                 </button>
             </form>
         </section>
-
-        
-
-        <!-- <section id="topics" class="flex items-center justify-center w-1/3 h-40 mx-auto border border-white rounded-xl">
-            <ul>
-                {% for topico in topicos %}
-                    <li class="flex flex-row hover:underline"><span class="mr-2"><img class="w-7 h-7" src="{{ topico.icon_topico.url }}" alt=""></span><a href="{% url 'exibir_topico' topico.id %}">{{ topico.nome_topico }}</a></li>
-                {% endfor %}
-            </ul>
-        </section id="topics"> -->
 
     {% endblock %}
 
