--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -11,13 +11,13 @@
         <h1 class="mt-3 mb-5 text-4xl font-bold text-center">Bem-vindo ao Class01: Seu Portal de Conteúdos Tecnológicos!</h1>
 
         <div class="flex items-center mt-10 lg:flex-row sm:flex-col">
-            <div class="w-1/3 mx-10 mt-2 mb-auto">
+            <div class="w-1/3 mx-10 mt-2 mb-auto sm:w-4/5">
                 <p class="mx-10 mt-2 mb-auto text-lg font-semibold text-left text-wrap">No Class01, acreditamos que a tecnologia é a chave para o futuro. Nosso objetivo é proporcionar a você o melhor conteúdo tecnológico, focado em programação e suas diversas vertentes. Aqui, você encontrará um vasto acervo de recursos essenciais para aprimorar suas habilidades e expandir seu conhecimento na área.</p>
 
                 <button type="submit" class="px-4 py-2 mx-10 mt-10 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Comece agora</button>
             </div>
 
-            <img class="w-1/2 h-auto mt-5 mb-5 rounded-xl" src="../img/curso-de-programacao.jpg" alt="aprendiz de programação">
+            <img class="w-1/2 h-auto rounded-xl" src="../img/Webinar-rafiki.png" alt="aprendiz de programação">
         </div>
 
         <section id="topics" class="w-2/3 mx-auto">
