feat: Adicionadas novas estilizações ao projeto     - Criação do section de contato/feedback

--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -9,7 +9,7 @@
     {% tailwind_css %}
   </head>
 
-<body class="leading-normal tracking-normal text-white bg-black">
+<body class="leading-normal tracking-normal text-white bg-slate-800">
     
 <nav class="bg-white border-gray-200 dark:bg-gray-900">
   <div class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto">
@@ -100,6 +100,8 @@
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 </body>
 </html>
