--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -20,7 +20,7 @@
             <img class="w-1/2 h-auto rounded-xl" src="../img/Webinar-rafiki.png" alt="aprendiz de programação">
         </div>
 
-        <section id="topics" class="mx-auto">
+        <section id="topics" class="mx-auto mb-16">
             <h2 class="text-3xl text-center">Conheça nossos conteúdos</h2>
 
             <div class="w-10/12 mx-auto">
@@ -35,7 +35,7 @@
                                 <div class="flex flex-col px-5 pt-2">
                                     <h2 class="font-semibold text-black">{{ topico.nome_topico }}</h2>
                                     <a href="{% url 'exibir_topico' topico.id %}">
-                                        <button class="px-2 py-1 mt-2 text-white transition duration-150 bg-blue-500 rounded-md cursor-pointer hover:bg-blue-700" type="button">
+                                        <button class="fixed px-2 py-1 mt-2 text-white transition duration-150 bg-blue-500 rounded-md cursor-pointer hover:bg-blue-700" type="button">
                                             Saiba mais
                                         </button>
                                     </a>
@@ -47,7 +47,7 @@
             </div>
         </section>
 
-        <section id="contact" class="relative w-4/5 pt-20 mx-auto bg-gray-700 rounded-3xl 2xl:pt-40">
+        <section id="contact" class="relative w-4/5 mx-auto bg-gray-700 sm:pt-20 rounded-3xl 2xl:pt-40">
             
             <div class="absolute top-0 right-0 hidden w-1/2 h-full bg-gray-600 border-2 rounded-3xl lg:block"></div>
 
@@ -97,7 +97,9 @@
                                         </label> -->
                                         {{ form.nome }}
                                         {% if form.nome.errors %}
-                                            <p class="text-xs italic text-red-500">{{ form.nome.errors }}</p>
+                                            <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
+                                                <span class="font-medium">Erro!</span> {{ form.nome.errors }}.
+                                            </div>
                                         {% endif %}
                                     </div>
                                     <div class="mb-4 text-gray-800">
@@ -106,7 +108,9 @@
                                         </label> -->
                                         {{ form.email }}
                                         {% if form.email.errors %}
-                                            <p class="text-xs italic text-red-500">{{ form.email.errors }}</p>
+                                            <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
+                                                <span class="font-medium">Erro!</span> {{ form.email.errors }}.
+                                            </div>
                                         {% endif %}
                                     </div>
                                     <div class="mb-4 text-gray-800">
@@ -115,7 +119,9 @@
                                         </label> -->
                                         {{ form.assunto }}
                                         {% if form.assunto.errors %}
-                                            <p class="text-xs italic text-red-500">{{ form.assunto.errors }}</p>
+                                            <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
+                                                <span class="font-medium">Erro!</span> {{ form.assunto.errors }}.
+                                            </div>
                                         {% endif %}
                                     </div>
                                     <div class="mb-4 text-gray-800">
@@ -124,7 +130,9 @@
                                         </label> -->
                                         {{ form.mensagem }}
                                         {% if form.mensagem.errors %}
-                                            <p class="text-xs italic text-red-500">{{ form.mensagem.errors }}</p>
+                                            <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
+                                                <span class="font-medium">Erro!</span> {{ form.mensagem.errors }}.
+                                            </div>
                                         {% endif %}
                                     </div>
                                     <div class="flex mb-10">
